# patient_navigator

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  spec.config.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a1b5f346422_add_contact_person_to_hospitals.py  1884b38009f6_add_doctors_table.py  6a563b58a60d_add_patients_and_cases.py  741913336db1_add_medical_profiles.py  8a69c2c6df35_add_clinician_reviews.py  9933d56e8bcc_add_follow_ups.py  a1b2c3d4e5f6_add_timeline_events.py  b2c3d4e5f6a7_add_documents.py  c8921a6eee2f_add_hospitals.py  ca50fbe0bd75_add_system_settings_table.py  caf220bea201_add_funding_programs.py  f5ca355bad75_create_roles_users_refresh_tokens_audit_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  file_storage.py  logging.py  security.py
backend/app/middleware/: audit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  base.py  case.py  doctor.py  document.py  follow_up.py  funding_program.py  hospital.py  medical_profile.py  medical_summary.py  patient.py  refresh_token.py  role.py  system_setting.py  timeline_event.py  user.py
backend/app/schemas/: audit.py  auth.py  case.py  doctor.py  document.py  follow_up.py  funding_program.py  hospital.py  medical_profile.py  medical_summary.py  patient.py  settings.py  validators.py
backend/app/services/: ai_providers.py  ai_service.py  auth_service.py  case_service.py  db_maintenance_service.py  doctor_service.py  document_service.py  follow_up_service.py  (+12 more)
backend/scripts/: scrape_chennai_hospitals.py  seed.sql  seed_minimal.py
backend/tests/: conftest.py  seed.py
(+121 files in other folders)
