[project]
name = "patient-navigator-backend"
version = "0.1.0"
description = "AI-assisted patient care coordination platform — backend API"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "jsonschema>=4.22",
    "anyio>=4.4",
    "faker>=25.0",
    "pip-audit>=0.7",
    "psutil>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "spec(spec_id): link test to a spec ID in REGISTRY.md",
    "performance: performance benchmark test",
    "observability: observability / audit test",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008", "N802", "N818", "N999"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
